--- a/index.html
+++ b/index.html
@@ -5,33 +5,17 @@
   	<meta name="viewport" content="width=device-width,initial-scale=1">
   	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <title>Xiaoyi Ru</title>
+    <title>CHANGE TITLE HERE</title>
   </head>
   <body>
-    <body>
 
-  		<h1> welcome  </h1> <br>
-  		<a href="page2.html">link to next page </a>
-      <p> The  page  you   see  is my homepage :)</p>
+  	<div class="intro">
+  		<h1>Hello World</h1> <br>
+  		<a href="page2.html">Enchanted link</a>
+  	</div>
 
-  
-
-     
-
-
-
-
-
-
-
-      <h2> </h2>
- 
- 
-  	
-
-     
-
-      <a href="">
+  	<div class="gif">
+  		<img src="assets/images/world.gif">
   	</div>
 
   
