--- a/index.html
+++ b/index.html
@@ -5,18 +5,41 @@
   	<meta name="viewport" content="width=device-width,initial-scale=1">
   	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <title>CHANGE TITLE HERE</title>
+
+	<script src="assets/js/jquery.js"></script>
+	<script src="assets/js/marquee3k.js"></script>
+	<script src="assets/js/main.js"></script>
+	<script src="assets/js/jquery-ui.js"></script>
+
+
+
+
+    <title>Xiaoyi </title>
   </head>
   <body>
 
   	<div class="intro">
-  		<h1>Hello World</h1> <br>
-  		<a href="page2.html">Enchanted link</a>
+  		<h1>Hello </h1> <br>
+  		
   	</div>
 
-  	<div class="gif">
-  		<img src="assets/images/world.gif">
-  	</div>
+  	<div class="box">
+  		<img src="assets/images/1.jpg" style="left: 310px; top: 200px; width: 55%; ">
+  		</div>
+  	
+<div  class="box w">
+<img data-src="assets/images/2.jpg"  style="left: 310px; top: 20px; width: 30%; " src="assets/images/2.jpg"> </div>
+<div  class="box e">
+<img data-src="assets/images/2.jpg"  style="left: 310px; top: 20px; width: 65%; " src="assets/images/3.jpg"> </div>
+<div  class="box r">
+<img data-src="assets/images/2.jpg"  style="left: 310px; top: 20px; width: 60%; " src="assets/images/4.jpg"> </div>
+<div  class="box t">
+<img data-src="assets/images/2.jpg"  style="left: 310px; top: 20px; width: 50%; " src="assets/images/5.jpg"> </div>
+
+
+
+
+
 
   
   </body>
