--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
   	</div>
 
   	<div class="box">
-  		<img src="assets/images/1.JPG" style="left: 310px; top: 200px; width: 55%; ">
+  		<img src="assets/images/1.jpg" style="left: 310px; top: 200px; width: 55%; ">
   		</div>
   	
 <div  class="box w">
 <img data-src="assets/images/2.jpg"  style="left: 310px; top: 20px; width: 30%; " src="assets/images/2.jpg"> </div>
 <div  class="box e">
-<img data-src="assets/images/3.JPG"  style="left: 310px; top: 20px; width: 65%; " src="assets/images/3.JPG"> </div>
+<img data-src="assets/images/3.jpg"  style="left: 310px; top: 20px; width: 65%; " src="assets/images/3.jpg"> </div>
 <div  class="box r">
 <img data-src="assets/images/4.jpg"  style="left: 310px; top: 20px; width: 60%; " src="assets/images/4.jpg"> </div>
 <div  class="box t">
