--- a/index.html
+++ b/index.html
@@ -24,17 +24,21 @@
   	</div>
 
   	<div class="box">
-  		<img src="assets/images/1.jpg" style="left: 310px; top: 200px; width: 80%; ">
+  		<img src="assets/images/1.JPG" style="left: 310px; top: 200px; width: 80%; ">
   	  </div>
   	
 <div  class="box w">
 <img data-src="assets/images/2.jpg"  style="left: 310px; top: 20px; width: 50%; " src="assets/images/2.jpg"> </div>
 <div  class="box e">
-<img data-src="assets/images/3.jpg"  style="left: 310px; top: 20px; width: 80%; " src="assets/images/3.jpg"> </div>
+<img data-src="assets/images/3.JPG"  style="left: 310px; top: 20px; width: 80%; " src="assets/images/3.JPG"> </div>
 <div  class="box r">
 <img data-src="assets/images/4.jpg"  style="left: 310px; top: 20px; width: 80%; " src="assets/images/4.jpg"> </div>
 <div  class="box t">
 <img data-src="assets/images/5.jpg"  style="left: 310px; top: 20px; width: 80%; " src="assets/images/5.jpg"> </div>
+
+<div  class="box y">
+<img data-src="assets/images/5.JPG"  style="left: 310px; top: 20px; width: 80%; " src="assets/images/6.JPG"> </div>
+
 
 
 
